--- a/po/wesnoth-multiplayer/ko.po
+++ b/po/wesnoth-multiplayer/ko.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.1.1+svn\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-08-27 10:14+0200\n"
-"PO-Revision-Date: 2010-11-08 20:33+0900\n"
+"PO-Revision-Date: 2011-09-30 20:09+0900\n"
 "Last-Translator: mistzone <drier22@gmail.com>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -60,7 +60,7 @@ msgstr ""
 #: data/multiplayer/factions/knalgans-aoh.cfg:4
 #: data/multiplayer/factions/knalgans-default.cfg:4
 msgid "Knalgan Alliance"
-msgstr "Knalga 연합"
+msgstr "나르간 연합"
 
 #. [multiplayer_side]: id=Loyalists, type=Lieutenant
 #. [multiplayer_side]: id=Loyalists, type=random
@@ -456,7 +456,7 @@ msgstr ""
 "엔트 Bramwythl은 다른 엔트들조차도 느릿하고 말수 적은 이로 평가하던 엔트였습"
 "니다. 그는 그 어떤 엔트들보다도 햇살 아래서 팔을 높이 들고 창공을 바라보는 것"
 "들 즐겼지요. 심지어 언젠가 그는 친구들에게 그의 가장 큰 소원은 영원히 영광스"
-"런 태양의 빛을 쬐고 싶다고 말한 적도 있었답니다.\n"
+"런 태양의 빛을 쬐는 것이라고 말한 적도 있었답니다.\n"
 "하지만, 그 때로부터 얼마 지나지 않아 엔트들의 지역 사회에 무서운 괴물이 오고 "
 "있다는 소문이 들려왔습니다. 그 괴물은 이 지역에 있는 몇 안되는 엔트들을 간단"
 "히 부숴버릴 수 있었지요. 그들은 재빨리 떠났지만(엔트들 입장에서 말이죠, 어쨌"
@@ -496,9 +496,10 @@ msgid ""
 "\n"
 "Perhaps he should not have shouted quite so loudly.... "
 msgstr ""
-"대장군 Aethec Corryn이 남긴 마지막 말은 이렇다: \"Talael Ryndoc! 네놈을 찾아 "
-"왔다! Haldric 홀로 돌아가서 왕궁에 네가 우리 결투를 회피한 겁쟁이라고 말할테"
-"다! 너의 불명예는 내가 너에게 내릴 죽음보다도 고통스러울 것이다!\"\n"
+"대장군 Aethec Corryn이 남긴 마지막 말은 이렇다: \"Talael Ryndoc! 내가 네놈을 "
+"찾아서 여기까지 왔다! 나오지 않으면 Haldric 홀로 돌아가서 왕궁에 네가 우리 결"
+"투를 회피한 겁쟁이라고 퍼뜨리겠다! 너의 불명예는 내가 너에게 내릴 죽음보다도 "
+"고통스러울 것이다!\"\n"
 "\n"
 "그는 그렇게 크게 소리쳐서는 안되었다...."
 
@@ -1573,17 +1574,17 @@ msgstr ""
 #. [label]
 #: data/multiplayer/scenarios/6p_Team_Survival.cfg:468
 msgid "Turn 17: Undead"
-msgstr ""
+msgstr "17 턴: 언데드"
 
 #. [label]
 #: data/multiplayer/scenarios/6p_Team_Survival.cfg:473
 msgid "Tower of Doom"
-msgstr ""
+msgstr "멸망의 탑"
 
 #. [message]: speaker=narrator
 #: data/multiplayer/scenarios/6p_Team_Survival.cfg:580
 msgid "Faery"
-msgstr ""
+msgstr "요정"
 
 #. [message]: speaker=narrator
 #: data/multiplayer/scenarios/6p_Team_Survival.cfg:581
@@ -1592,11 +1593,14 @@ msgid ""
 "impossible. Frankly, I haven’t got a clue as to how you did it, so send me "
 "the replay by mail to: roze@roze.mine.nu. Thank You!"
 msgstr ""
+"많은 이들이 불가능하다고 하던 맵에서 살아남은 것을 축하합니다. 솔직히 당신이 "
+"어떻게 해낼 수 있었는지는 모르겠네요, 리플레이를 roze@roze.mine.nu.로 보내주"
+"시면 감사하겠습니다."
 
 #. [message]: speaker=narrator
 #: data/multiplayer/scenarios/6p_Team_Survival.cfg:595
 msgid "Death"
-msgstr ""
+msgstr "사망"
 
 #. [message]: speaker=narrator
 #: data/multiplayer/scenarios/6p_Team_Survival.cfg:597
@@ -1604,6 +1608,8 @@ msgid ""
 "You have lost this game, but fear not. You can always try again. And again. "
 "And again. *Muahahaha*"
 msgstr ""
+"넌 게임에 졌다. 하지만 걱정 말아라. 언제든 다시 해 볼수 있으니까. 또 다시. "
+"또 다시. *므하하하하*"
 
 #. [multiplayer]: id=multiplayer_The_Manzivan_Traps
 #: data/multiplayer/scenarios/6p_The_Manzivan_Traps.cfg:7
@@ -1704,7 +1710,7 @@ msgstr ""
 #: data/multiplayer/scenarios/Random_Scenario_Desert.cfg:5
 #: data/multiplayer/scenarios/Random_Scenario_Desert.cfg:10
 msgid "Random map (Desert)"
-msgstr ""
+msgstr "무작위 맵 (사막)"
 
 #. [multiplayer]: id=multiplayer_Random_Map_Desert
 #: data/multiplayer/scenarios/Random_Scenario_Desert.cfg:6
@@ -1713,13 +1719,15 @@ msgid ""
 "unbalanced, but if you have time, you can regenerate them until you get a "
 "good one."
 msgstr ""
+"주로 모래 지형으로 된 무작위 맵. 참고: 무작위 맵들은 보통 밸런스가 맞지 않으"
+"나 시간이 충분하다면 좋은 맵을 얻을때까지 계속 재생성할 수 있습니다."
 
 #. [scenario]: id=multiplayer_Random_Map_Marsh
 #. [multiplayer]: id=multiplayer_Random_Map_Marsh
 #: data/multiplayer/scenarios/Random_Scenario_Marsh.cfg:5
 #: data/multiplayer/scenarios/Random_Scenario_Marsh.cfg:10
 msgid "Random map (Marsh)"
-msgstr ""
+msgstr "무작위 맵 (습지)"
 
 #. [multiplayer]: id=multiplayer_Random_Map_Marsh
 #: data/multiplayer/scenarios/Random_Scenario_Marsh.cfg:6
@@ -1728,13 +1736,15 @@ msgid ""
 "unbalanced, but if you have time, you can regenerate them until you get a "
 "good one."
 msgstr ""
+"늪지대가 주요 지형인 무작위 맵. 참고: 무작위 맵들은 보통 밸런스가 맞지 않으"
+"나 시간이 충분하다면 좋은 맵을 얻을때까지 계속 재생성할 수 있습니다."
 
 #. [scenario]: id=multiplayer_Random_Map_Winter
 #. [multiplayer]: id=multiplayer_Random_Map_Winter
 #: data/multiplayer/scenarios/Random_Scenario_Winter.cfg:5
 #: data/multiplayer/scenarios/Random_Scenario_Winter.cfg:10
 msgid "Random map (Winter)"
-msgstr ""
+msgstr "무작위 맵 (겨울)"
 
 #. [multiplayer]: id=multiplayer_Random_Map_Winter
 #: data/multiplayer/scenarios/Random_Scenario_Winter.cfg:6
@@ -1743,6 +1753,9 @@ msgid ""
 "terrains. Note: random maps are often unbalanced, but if you have time, you "
 "can regenerate them until you get a good one."
 msgstr ""
+"봄과 겨울 사이의 경계점에 맞춰진 무작위 맵으로, 주로 눈 덮인 지형으로 구성됩"
+"니다. 참고: 무작위 맵들은 보통 밸런스가 맞지 않으나 시간이 충분하다면 좋은 맵"
+"을 얻을때까지 계속 재생성할 수 있습니다."
 
 #. [multiplayer]: id=wesbench_ai
 #: data/multiplayer/scenarios/Wesbench_AI.cfg:9
