--- a/po/wesnoth-units/ko.po
+++ b/po/wesnoth-units/ko.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.1.1+svn\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-09-04 11:42+0200\n"
-"PO-Revision-Date: 2011-09-28 15:28+0900\n"
+"PO-Revision-Date: 2011-09-30 21:16+0900\n"
 "Last-Translator: mistzone <drier22@gmail.com>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -210,9 +210,8 @@ msgstr "불타는 숨결"
 
 #. [unit_type]: id=Drake Blademaster, race=drake
 #: data/core/units/drakes/Blademaster.cfg:4
-#, fuzzy
 msgid "Drake Blademaster"
-msgstr "Drake Blademaster"
+msgstr ""
 
 #. [unit_type]: id=Drake Blademaster, race=drake
 #: data/core/units/drakes/Blademaster.cfg:21
@@ -235,9 +234,8 @@ msgstr "전투 갈고리"
 
 #. [unit_type]: id=Drake Burner, race=drake
 #: data/core/units/drakes/Burner.cfg:4
-#, fuzzy
 msgid "Drake Burner"
-msgstr "Drake Burner"
+msgstr ""
 
 #. [unit_type]: id=Drake Burner, race=drake
 #: data/core/units/drakes/Burner.cfg:20
@@ -266,9 +264,8 @@ msgstr "발톱"
 
 #. [unit_type]: id=Drake Clasher, race=drake
 #: data/core/units/drakes/Clasher.cfg:4
-#, fuzzy
 msgid "Drake Clasher"
-msgstr "Drake Clasher"
+msgstr ""
 
 #. [unit_type]: id=Drake Clasher, race=drake
 #: data/core/units/drakes/Clasher.cfg:23
@@ -320,9 +317,8 @@ msgstr "창"
 
 #. [unit_type]: id=Drake Enforcer, race=drake
 #: data/core/units/drakes/Enforcer.cfg:4
-#, fuzzy
 msgid "Drake Enforcer"
-msgstr "Drake Enforcer"
+msgstr ""
 
 #. [unit_type]: id=Drake Enforcer, race=drake
 #: data/core/units/drakes/Enforcer.cfg:21
@@ -388,9 +384,8 @@ msgstr ""
 
 #. [unit_type]: id=Drake Flameheart, race=drake
 #: data/core/units/drakes/Flameheart.cfg:4
-#, fuzzy
 msgid "Drake Flameheart"
-msgstr "Drake Flameheart"
+msgstr ""
 
 #. [unit_type]: id=Drake Flameheart, race=drake
 #: data/core/units/drakes/Flameheart.cfg:27
@@ -2591,9 +2586,8 @@ msgstr "쇠스랑"
 
 #. [unit_type]: id=Royal Warrior, race=human
 #: data/core/units/humans/Royal_Warrior.cfg:8
-#, fuzzy
 msgid "Royal Warrior"
-msgstr "Royal Warrior"
+msgstr "왕가의 전사"
 
 #. [unit_type]: id=Royal Warrior, race=human
 #: data/core/units/humans/Royal_Warrior.cfg:31
@@ -2753,7 +2747,7 @@ msgstr ""
 #: data/core/units/khalifate/Tabib.cfg:23
 #: data/core/units/khalifate/Tineen.cfg:23
 msgid "There is currently no description available for this unit."
-msgstr ""
+msgstr "아직 이 유닛에 대한 설명은 만들어져 있지 않습니다."
 
 #. [attack]: type=pierce
 #: data/core/units/khalifate/Batal.cfg:31
@@ -3293,9 +3287,8 @@ msgstr "화염의 발톱"
 
 #. [unit_type]: id=Giant Mudcrawler, race=monster
 #: data/core/units/monsters/Giant_Mudcrawler.cfg:4
-#, fuzzy
 msgid "Giant Mudcrawler"
-msgstr "Giant Mudcrawler"
+msgstr ""
 
 #. [unit_type]: id=Giant Mudcrawler, race=monster
 #: data/core/units/monsters/Giant_Mudcrawler.cfg:19
@@ -3375,9 +3368,8 @@ msgstr "그물"
 
 #. [unit_type]: id=Mudcrawler, race=monster
 #: data/core/units/monsters/Mudcrawler.cfg:4
-#, fuzzy
 msgid "Mudcrawler"
-msgstr "Mudcrawler"
+msgstr ""
 
 #. [unit_type]: id=Mudcrawler, race=monster
 #: data/core/units/monsters/Mudcrawler.cfg:21
@@ -3555,6 +3547,11 @@ msgid ""
 "from blows. This makes them potent on land, but the friction of water "
 "greatly impedes the technique."
 msgstr ""
+"나가의 어린 전사들은 그들이 두번째 검을 받을 자격을 얻을 날을 갈망한다. 이들"
+"의 쌍검을 다루는 무술 수련은 오크나 다른 종족의 것과는 완전히 다른데, 그 이유"
+"는 이들이 자신들의 뱀과 유사한 몸체를 꼬고 돌려서 타격을 피하는 가장 효율적"
+"인 방법을 먼저 배웠기 때문이다. 이 기술로 이들은 땅에서도 강해졌지만, 물의 마"
+"찰은 이 기술을 매우 쓰기 어렵게 한다."
 
 #. [female]
 #: data/core/units/nagas/Warrior.cfg:92
@@ -3571,6 +3568,11 @@ msgid ""
 "dodge from blows. This makes them potent on land, but the friction of water "
 "greatly impedes their ability to do this."
 msgstr ""
+"많은 어린 나기니 전사들은 그들이 두번째 검을 받을 자격을 얻을 날을 갈망한다. "
+"이들의 쌍검을 다루는 무술 수련은 오크나 다른 종족의 것과는 완전히 다른데, 그 "
+"이유는 이들이 자신들의 뱀과 유사한 몸체를 꼬고 돌려서 타격을 피하는 가장 효율"
+"적인 방법을 먼저 배웠기 때문이다. 이 기술로 이들은 땅에서도 강해졌지만, 물의 "
+"마찰은 이 기술을 쓰는 능력을 크게 감퇴시킨다."
 
 #. [unit_type]: id=Ogre, race=ogre
 #: data/core/units/ogres/Ogre.cfg:4
@@ -3623,6 +3625,11 @@ msgid ""
 "semblance of training. Even as poorly handled as they are, their weapons can "
 "still be quite deadly, and the wielders thereof rarely march alone."
 msgstr ""
+"오크들 가운데서 활은 비겁한 무기로 간주된다. 하지만 오크들 중에서도 특히 어"
+"린 것들이나 몸집이 작은 것들은 그런 시선에도 불구하고 활을 쓰는 편이 더 실용"
+"적이다. 오크 궁수들은 장비가 빈약하며 훈련 비슷한 것도 받지 못한다. 제대로 활"
+"용하지 못함에도 불구하고 그들의 무기는 여전히 꽤나 치명적인데, 그 이유는 그"
+"걸 소지한 이들이 혼자 다니는 일이 거의 없기 때문이다."
 
 #. [unit_type]: id=Orcish Assassin, race=orc
 #: data/core/units/orcs/Assassin.cfg:4
@@ -3652,7 +3659,7 @@ msgstr "단도 투척"
 #. [unit_type]: id=Orcish Crossbowman, race=orc
 #: data/core/units/orcs/Crossbowman.cfg:4
 msgid "Orcish Crossbowman"
-msgstr "오크 석궁수"
+msgstr "오크 노병"
 
 #. [unit_type]: id=Orcish Crossbowman, race=orc
 #: data/core/units/orcs/Crossbowman.cfg:19
@@ -3662,9 +3669,9 @@ msgid ""
 "enough to wield them are capable warriors, and what they lack in finesse, "
 "they make up for in numbers."
 msgstr ""
-"오크의 석궁은 인간이나 드워프의 것에 비하면 조잡한 흉내에 불과하지만, 어떻게 "
-"만든 것이라도 석궁은 꽤 강력한 도구이다. 그걸 가질만큼 특별한 오크들은 유능"
-"한 전사들이며, 그들은 기술에서 모자란 것이 있으면 숫자로 메꿔버린다."
+"오크의 쇠뇌는 인간이나 드워프의 것에 비하면 조잡한 흉내에 불과하지만, 그래도 "
+"쇠뇌 자체는 꽤 강력한 도구이다. 그걸 가질만큼 특별한 오크들은 유능한 전사들이"
+"며, 그들은 기술에서 모자란 것이 있으면 숫자로 메꿔버린다."
 
 #. [unit_type]: id=Orcish Grunt, race=orc
 #: data/core/units/orcs/Grunt.cfg:4
@@ -3695,6 +3702,10 @@ msgid ""
 "certain rapport with their kin, especially goblins, and can inspire them to "
 "fight with uncharacteristic boldness."
 msgstr ""
+"비상식적으로 영리한 오크들은 주로 전투 집단의 지도자가 된다. 이들은 필요에 의"
+"해 쇠뇌를 가지고 다니지만, 검을 훨씬 더 잘 다룬다. 이러한 오크들은 강력한 전"
+"사이지만, 이들은 또한 동족들, 특히 고블린과 특별한 관계를 가지고 있어 이들이 "
+"평소답지않은 배짱을 갖고 싸움에 임하도록 고무할 수 있다."
 
 #. [unit_type]: id=Orcish Ruler, race=orc
 #: data/core/units/orcs/Ruler.cfg:4
@@ -3710,6 +3721,10 @@ msgid ""
 "their rare ability to rally other orcs to battle, to give orders that are "
 "followed not out of fear, but loyalty."
 msgstr ""
+"거대한 부족을 불화와 내분 없이 유지할 수 있는 오크는 대체로 비범한 지능과 지"
+"휘력을 가지고 있으며, 필수적으로 강력함도 겸비한다. 이들은 검과 쇠뇌에 숙달되"
+"어 있지만, 이들의 진정한 재능은 다른 오크들을 전투로 이끌며, 명령을 내리고 공"
+"포가 아닌 충성심으로 따르게 하는 희귀한 능력이다."
 
 #. [attack]: type=blade
 #: data/core/units/orcs/Ruler.cfg:40 data/core/units/orcs/Sovereign.cfg:41
@@ -3731,11 +3746,15 @@ msgid ""
 "poison, is a vicious tool, and its common use on the battlefield is often "
 "the real cause of orcish supremacy."
 msgstr ""
+"더 크거나 숙련된 오크 암살자들은 그 적들에게 '살육자'로 불리운다. 살육자들은 "
+"갑옷의 방어를 포기하는 대신에 빠른 속도와 전투에서의 날렵함을 성취해냈다. 이"
+"들이 쓰는 무기인 독은 잔인한 도구로, 오크가 우위를 차지하는 진짜 이유는 대부"
+"분 이것을 전장에서 많이 쓰기 때문이다."
 
 #. [unit_type]: id=Orcish Slurbow, race=orc
 #: data/core/units/orcs/Slurbow.cfg:4
 msgid "Orcish Slurbow"
-msgstr "오크 연노병"
+msgstr "오크 강노병"
 
 #. [unit_type]: id=Orcish Slurbow, race=orc
 #: data/core/units/orcs/Slurbow.cfg:23
@@ -3750,6 +3769,14 @@ msgid ""
 "Orcs prize any such weapons they can manage to plunder, and they invariably "
 "end up in the hands of their strongest and most cunning archers."
 msgstr ""
+"쇠뇌의 기본 설계는 강노로 발전하였다. 이것은 합판이나 뼈로 되어 있는 더 복잡"
+"한 장치로서, 무기를 재장전하는 수동 크레인퀸으로 마감되어있어 발사체를 날릴 "
+"때 더 큰 비거리를 갖는다.. 이 장치는 단순한 쇠뇌보다 더 다루기 쉬우며, 게다"
+"가 훨씬 더 강력하다. 또한 이것은 오크의 생산기술을 월등히 뛰어넘는 장비이기"
+"도 하다.\n"
+"\n"
+"오크들은 그들이 약탈한 이런 무기들을 귀하게 여기며, 당연하게도 그들은 이것을 "
+"그들 중 가장 강력하고 기술이 좋은 궁수에게 넘긴다."
 
 #. [unit_type]: id=Orcish Sovereign, race=orc
 #: data/core/units/orcs/Sovereign.cfg:4
@@ -3766,6 +3793,11 @@ msgid ""
 "the civilized races of the world. The surest way to disperse such a host is "
 "to slay this rare orc who can hold it together."
 msgstr ""
+"때때로 천부적인 카리스마와 동족들에 대한 통제력을 가진 오크가 나타난다. 그가 "
+"초반의 지도력 다툼에서 살아남을만큼 강하고 교활하기까지 하다면, 그는 반드시 "
+"거대한 전사의 무리를 거느리게 되고, 또한 세상의 문명화된 종족들에게 크나큰 골"
+"칫거리를 안겨주게 된다. 이 집단을 흩뜨릴 가장 확실한 방법은 이들을 결집시킬 "
+"수 있는 이 희귀한 오크를 죽이는 것이다."
 
 #. [unit_type]: id=Orcish Warlord, race=orc
 #: data/core/units/orcs/Warlord.cfg:4
@@ -4110,7 +4142,6 @@ msgstr "시체를 먹는 자"
 
 #. [unit_type]: id=Necrophage, race=undead
 #: data/core/units/undead/Corpse_Necrophage.cfg:19
-#, fuzzy
 msgid ""
 "The necrophage, or ‘devourer of the dead’, is a monstrous, corpulent thing, "
 "which bears only a crude resemblance to a man. They appear to be quite "
@@ -4122,8 +4153,12 @@ msgid ""
 "but nightmarish."
 msgstr ""
 "아귀, 또는 '시체 포식자'는 인간과 약간 유사한 형태를 갖고 있을 뿐인 기괴하고 "
-"비대한 존재다. 그것은 움직이긴 하지만 마치 썩은 것 같다. 그들의 핏속엔 병균"
-"과 맹독이 그득하며, 몸체에서는 마주하기 힘들 정도의 악취가 난다. "
+"비대한 존재다. 이들은 움직이긴 하지만 상당히 썩어 있어서 그 핏속엔 병균과 맹"
+"독이 그득하며, 마주하기 힘들 정도의 악취가 난다. 하지만 이 일그러진 존재들에"
+"게 씌인 추악한 마법을 인지할 수 있는 이들만이 명백히 알고 있는 이들의 가장 끔"
+"찍한 점은, 이것들이 어떤 식으로든 살아있는 인간으로 만들어진 것이라는 점이다 "
+"— 그 과정에 대해서는 거의 알려져 있지 않지만, 그만큼 악마같은 짓도 없을 것이"
+"다."
 
 #. [unit_type]: id=Soulless, race=undead
 #: data/core/units/undead/Corpse_Soulless.cfg:6
@@ -4350,9 +4385,9 @@ msgid ""
 "its ultimate prize."
 msgstr ""
 "'흑마법'이라고 간주되는 것의 정점에 있는 것 중하나는 네크로맨시라는 기술로, "
-"죽은 자에게 거짓 생명을 주어 일으키는 끔찍한 능력이다. 이 발견 하나가 흑마법"
-"에 대한 온 인류의 규탄을 불러왔는데, 단지 악몽이었을 뿐이었던 것들에게 그것"
-"이 거대한 새 무기를 주었기 때문이다.\n"
+"죽은 자에게 거짓 생명을 주어 일으키는 끔찍한 능력이다. 이 발견이 단지 악몽이"
+"었을 뿐이었던 존재들에게 강력한 신무기를 준 탓에, 오직 이것만으로 흑마법에 대"
+"한 온 인류의 규탄과 저주가 시작되었다.\n"
 "\n"
 "모든 측면에서 이 능력은 그 궁극의 보상으로서 죽음을 속이는 첫걸음이다."
 
